--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dimforge/rapier3d": "^0.14.0",
     "camera-controls": "^2.9.0",
     "three": "^0.169.0",
+    "tweakpane": "^4.0.4",
     "vite": "^5.4.8",
     "vite-plugin-restart": "^0.4.1",
     "vite-plugin-top-level-await": "^1.4.4",
