--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
     "camera-controls": "^2.9.0",
+    "normalize-wheel": "^1.0.1",
     "stats-gl": "^3.3.0",
     "three": "^0.170.0",
     "tweakpane": "^4.0.4",
