--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@gltf-transform/functions": "^4.2.1",
     "@tweakpane/plugin-camerakit": "^0.3.0",
     "@tweakpane/plugin-essentials": "^0.2.1",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "camera-controls": "^2.9.0",
     "emoji-regex": "^10.4.0",
     "glob": "^13.0.0",
@@ -31,10 +32,10 @@
     "sharp": "^0.34.5",
     "stats-gl": "^3.6.0",
     "stylus": "^0.64.0",
-    "three": "^0.181.0",
+    "three": "^0.181.2",
     "tweakpane": "^4.0.4",
     "uuid": "^11.1.0",
-    "vite": "^5.4.8",
+    "vite": "^7.2.4",
     "vite-plugin-restart": "^0.4.1",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0"
